--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,5 @@
 [workspace]
 members = ["tcbpfd", "tcbpfd-common", "xtask"]
+
+[patch.crates-io]
+aya = {git = "https://github.com/aya-rs/aya", branch="main"}
